--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -3,15 +3,18 @@ FROM php:7.4-fpm
 # Cleaning and updating packages
 RUN apt-get autoremove && apt-get autoclean && apt-get update
 
-
-RUN apt-get update && apt-get install -y libzip-dev libpq-dev zlib1g-dev zip git
+# Installing libraries
+RUN apt-get install -y graphicsmagick jpegoptim \
+    libpq-dev zlib1g-dev libicu-dev libzip-dev procps \
+    libfreetype6-dev libjpeg62-turbo-dev libpng-dev && rm -rf /var/lib/apt/lists/*
 
 # Installing php-redis extension via pecl.
 RUN pecl install -o -f redis && rm -rf /tmp/pear
 
 # Enabling && configuring php extensions
 RUN docker-php-ext-enable redis
-RUN docker-php-ext-install pdo pdo_mysql mysqli bcmath zip
+RUN docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/
+RUN docker-php-ext-install pdo pdo_mysql mysqli bcmath intl  -j$(nproc) gd zip
 
 # Copy configuration files
 COPY ./php.ini /usr/local/etc/php/conf.d/uploads.ini
